# docs/swagger.json
@@ -25,12 +25,6 @@
                         "schema": {
                             "$ref": "#/definitions/model.Registration"
                         }
-                    },
-                    {
-                        "type": "string",
-                        "description": "test query param",
-                        "name": "test",
-                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -61,13 +55,16 @@
             "type": "object",
             "properties": {
                 "confirm": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "PaSsWoRd"
                 },
                 "name": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Username"
                 },
-                "passwd": {
-                    "type": "string"
+                "password": {
+                    "type": "string",
+                    "example": "PaSsWoRd"
                 }
             }
         }
